# python-experiments

./: .gitignore  README.md  RyeIdeas.md  add-black.py
.obsidian/: workspace.json
C4-DSL/: arch.ps1  c4-dsl-extension.dsl  workspace.dsl  workspace.json
actors/thespians/: helloActor.py  pyproject.toml
asyncio-exceptions/: README.md  pyproject.toml
asyncio-exceptions/src/: exceptions.py  obj.py  task.py
asyncio-task-group/: README.md  pyproject.toml
asyncio-task-group/src/: basic-trio.py  basic.py
cancellation/: README.md  pyproject.toml
cancellation/src/: cancel_steps.py  cancellation.py  obj.py  show_tasks.py  task.py  track.py
concurrent_failure/: README.md  basic_exception_groups.py  exception_groups.py  exception_groups_1.py  exception_groups_2.py  fallible.py  multiple_exceptions.py  pattern_match_exceptions.py  pyproject.toml  stdout_collisions.py  synchronized_output.py
concurrent_failure/text/: Blog.rs
cython-hello/: integrate.pyx  setup.py
cython-primes/: primes.pyx  setup.py
distribution/beeware-tutorial/helloworld/: CHANGELOG  pyproject.toml
distribution/beeware-tutorial/helloworld/src/helloworld/: app.py
distribution/pyox/: pyoxidizer.bzl
effects/: README.md  combine.ps1  convert-exceptions.py  convert_exceptions.py  convert_exceptions_2.py  flatmap.py  my_error.py  my_result.py  operations.py  pyproject.toml  python_enum.py  result.py  return_my_result.py  return_result.py  string_result.py  test_both.py  test_results.py  type_union.py
effects/experiments/: python_enum.py  string_convert_exceptions.py  test_results.py
effects/flatmap/: flatmap_result.py  main.py  my_result.py  operations.py  result.py
fastapi_demo/: README.md  pyproject.toml
fastapi_demo/src/: simple.py
fully_loaded/: README.md  compare_all.bat  go.py  go_rust_extension.py  no_concurrency.py  using_rust_extension.py  with_concurrency.py
fully_loaded/cpu_intensive_extension/: Cargo.toml
fully_loaded/cpu_intensive_extension/src/: lib.rs
fully_loaded/cython/: README.md  cpu_intensive.pyx
fully_loaded/rust/: Cargo.toml
fully_loaded/rust/src/: main.rs
fully_loaded/rust_extension/: Cargo.toml  README.md  pyproject.toml
fully_loaded/rust_extension/src/: lib.rs
icecream/dataclass/: README.md  data_class.py  pyproject.toml
lock_cancellation/: README.md  pyproject.toml
lock_cancellation/src/: lock_cancellation.py  trace_lock.py
multiprocessing-asynchresult/: pool.py  pool2.py
parallelism/: compare_all.bat  compare_all.md  compare_all.out  cpu_intensive.py  framework.py  function_tester.py  no_concurrency.py  scenario_tester.py  using_rust_extension.py  with_concurrency.py  with_processes.py  with_rust_extension.py  with_threads.py
parallelism/cython/: README.md  alternative_cython_approaches.py  cython_concurrency.py  setup.py
parallelism/rust_extension/: README.md  pyproject.toml
parallelism/trio_with_parallel/: README.md  pyproject.toml
parallelism/trio_with_parallel/src/: scenario_tester.py  trio_with_parallel.py  working.py
parallelism2/src/rust_extension/: README.md
process_pool_executor/: ppe.py
pyserde/: basic.py
python_to_rust/python_tree/: README.md  pyproject.toml
python_to_rust/python_tree/src/python_tree/: __init__.py  python_tree.py
python_to_rust/rust_tree/: Cargo.toml
python_to_rust/rust_tree/src/: main.rs
script-abbrev/: README.md  pyproject.toml
script-abbrev/src/: curio.txt  rich_demo.py  script_abbrev.py
task-group/: README.md  pyproject.toml
task-group/src/: sleeper-asyncio.py  sleeper-trio.py
threading/: README.md  lots.py  lots_of_threads.py  pyproject.toml
timeouts/: README.md  pyproject.toml
timeouts/src/: timeouts.py
trio-basic/: README.md  pyproject.toml
trio-basic/src/: tasks_intro.py
trio-basic/src/trio_basic/: tasks_intro.py
trio-parallel-basic/: README.md  pyproject.toml  trio_parallel_basic.py
trio-sleep/: README.md  pyproject.toml
trio-sleep/src/: sleep_demo.py
workers_with_queues/: README.md  pyproject.toml
workers_with_queues/src/: workers_with_queues.py
