[project]
name = "concurrent-failure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "icecream>=2.1.3",
]
[[project.authors]]
name = "Bruce Eckel"
email = "mindviewinc@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.black]
line-length = 53

[tool.hatch.metadata]
allow-direct-references = true
