[project]
name = "fastapi-demo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Bruce Eckel", email = "MindviewInc@gmail.com" }
]
dependencies = [
    "fastapi>=0.100.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "uvicorn>=0.23.1",
]

[tool.hatch.metadata]
allow-direct-references = true
