[project]
name = "fastapi-demo"
version = "0.1.0"
description = "Add your description here"
dependencies = [ "fastapi>=0.100.0",]
readme = "README.md"
requires-python = ">= 3.8"
[[project.authors]]
name = "Bruce Eckel"
email = "MindviewInc@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [ "uvicorn>=0.23.1",]

[tool.black]
line-length = 47

[tool.hatch.metadata]
allow-direct-references = true
