[project]
name = "task-group"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Bruce Eckel", email = "mindviewinc@gmail.com" }]
dependencies = [
    "trio>=0.22.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 47
