[project]
name = "trio-parallel-basic"
version = "0.1.0"
description = "Add your description here"
dependencies = [ "trio>=0.22.2", "trio_parallel>=1.2.0",]
readme = "README.md"
requires-python = ">= 3.8"
[[project.authors]]
name = "Bruce Eckel"
email = "mindviewinc@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev_dependencies = []

[tool.black]
line-length = 47

[tool.hatch.metadata]
allow-direct-references = true
