[project]
name = "thespians"
version = "0.1.0"
description = "Add a short description here"

dependencies = [
    "thespian>=3.10.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
