[project]
name = "python-tree"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Bruce Eckel", email = "BruceTEckel@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.4.1",
]

[tool.hatch.metadata]
allow-direct-references = true
